--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "yap": "^0.0.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
